cmake_minimum_required(VERSION 3.1)
# set(CMAKE_GENERATOR_PLATFORM "x86-windows")
set(VCPKG_DEFAULT_TRIPLET "x86-windows")
set(CMAKE_TOOLCHAIN_FILE "D:/vcpkg/scripts/buildsystems/vcpkg.cmake")
project(Games101)
find_package(Eigen3 REQUIRED CONFIG)
find_package(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS}) 
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})


add_subdirectory(pa0)
add_subdirectory(hw1)
add_subdirectory(hw2)
add_subdirectory(hw3)
add_subdirectory(hw4)
add_subdirectory(hw5)
add_subdirectory(hw6)